--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@ y <!DOCTYPE html>
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Cambia lo superficial</title>
+    <title>This is a test</title>
   </head>
   <body>
     <noscript>
